# dataNova

./: .env.example  .gitignore  CAHIER_RECETTE_AGENT2.md  CORRECTIONS_APPLIQUEES.md  Dockerfile  FIXES_TEST_SCRAPING.md  FRONTEND_DOCUMENTATION.md  QUICKSTART.md  README.md  ROADMAP.md  agent1ANoratest.py  cucumber.package.json  demo_agent_1a.py  demo_agent_1a_1b.py  deploy.sh  docker-compose.yml  outils de scraping CBAM et tests d'intégration  package-lock.json  package.json  pyproject.toml  test_agent_1_complete.py  test_architecture.py  test_model.py
backend/: AMELIORATIONS_AGENT2_RAPPORT.md  ANALYSE_TECHNIQUE_ECARTS.md  DEMANDES_CLIENT_COMPLETES.md  Dockerfile  FRONTEND_AGENT_1A.md  L_ESIGELEC11_transcription_propre.txt  README.md  ROADMAP.md  TEST_DATA_README.md  alembic.ini  check_data.py  check_logs.py  docker-compose.yml  notification_strategy.md  ping.db.old  populate_test_data.py  pyproject.toml  pytest.ini  reset_workflow_data.py  run_1a_1b.py  run_agent_1a_full.py  run_weather_test.py  test_agent1a_full.py  test_agent1b_now.py  test_agent2_integration.py  test_agent2_notification.py  test_agent2_solo.py  test_agent_1a_all_regulations.py  test_agent_1a_both_scenarios.py  test_agent_1a_domain.py  test_agent_1a_profile.py  test_agent_1a_weather.py  test_agent_2_regulatory.py  test_keywords.py  test_notification_only.py  test_notification_real.py  test_report_save.py  test_send_notification.py  test_subscription_filter.py  test_weather.py  (+2 more)
backend/alembic/: env.py
backend/config/: eurlex_domains.json  scoring_rules.json  sites_locations.json  sources.json
backend/data/: sources_config.json  test_data.json
backend/demo/: README.md  demo_agent_1a.py  demo_agent_1b.py  demo_pipeline_complete.py
backend/docs/: AGENT_1A_DOCUMENTATION.md  API_CONTRACT.yaml  (+1 more)
(+366 files in other folders)
